fix styles - dark mode

--- a/Components/AboutPage/AboutInformations.module.css
+++ b/Components/AboutPage/AboutInformations.module.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    background-color: #fff;
+    background-color: #f2f0ec;
     }
 
 .about__greetting{
@@ -25,6 +25,7 @@
     flex-direction: column;
     margin: 20px 30px;
     padding-bottom: 35px;
+    color: #000;
 }
 .about__upper__paragraph{
     display: flex;
@@ -32,11 +33,12 @@
     align-items: flex-start;
     margin: 35px 0;
     padding: 0 0 30px 0;
-    border-bottom: 1px solid rgba(0,0,0,0.3)
+    border-bottom: 1px solid rgba(0,0,0,0.3);
+    color: #000;
 }
 .about__paragraph{
     line-height: 1.5;
-
+    color: #000;
 }
 .about__paragraph:nth-of-type(1){
     padding-right: 35px;
@@ -47,6 +49,7 @@
     flex-wrap: wrap;
     margin: 10px 30px;
     width: 100%;
+    color: #000;
 }
 .about__fact{
     padding: 10px 0;
