--- a/pages/about.module.css
+++ b/pages/about.module.css
@@ -17,7 +17,7 @@
     text-align: center;
     text-transform: uppercase;
     margin: 0 40px;
-    color: #000;
+    color: #fff;
 }
 
 @media(min-width: 768px){
